log
Wed 12 Apr 2023 06:51:33 PM UTC: 
 tests:  0|6
total_score: 0/70
9a1e8ef
Wed 12 Apr 2023 09:51:17 PM UTC: 
 hashmap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
fe85d7c
Wed 12 Apr 2023 09:59:15 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:43:8: error: unused variable ‘clave’ [-Werror=unused-variable]
   43 |   long clave = hash(key,map->capacity);
      |        ^~~~~
cc1: all warnings being treated as errors
Compilation failed
0d59391
Wed 12 Apr 2023 10:29:12 PM UTC: 
 hashmap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  1|5
total_score: 10/70
1c0f039
Wed 12 Apr 2023 10:30:06 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
a3ddf4f
Wed 12 Apr 2023 10:34:02 PM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
5780ed0
Wed 12 Apr 2023 10:38:17 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
8ebf6e2
Wed 12 Apr 2023 10:44:45 PM UTC: 
 hashmap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  1|5
total_score: 10/70
7400500
Wed 12 Apr 2023 10:45:30 PM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  4|5
total_score: 20/70
1a67af5
Wed 12 Apr 2023 10:50:12 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
a3ec8f4
Wed 12 Apr 2023 10:50:47 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
7484807
Wed 12 Apr 2023 10:52:24 PM UTC: 
 hashmap.c | 15 ++++++++-------
 1 file changed, 8 insertions(+), 7 deletions(-)
 tests:  5|4
total_score: 30/70
f96615a
Wed 12 Apr 2023 11:02:55 PM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  5|4
total_score: 30/70
cec36cd
Wed 12 Apr 2023 11:16:05 PM UTC: 
 hashmap.c | 8 ++------
 1 file changed, 2 insertions(+), 6 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:89:16: error: too few arguments to function ‘hash’
   89 |   long clave = hash()
      |                ^~~~
hashmap.c:26:6: note: declared here
   26 | long hash( char * key, long capacity) {
      |      ^~~~
hashmap.c:91:5: error: expected ‘,’ or ‘;’ before ‘return’
   91 |     return NULL;
      |     ^~~~~~
hashmap.c:89:8: error: unused variable ‘clave’ [-Werror=unused-variable]
   89 |   long clave = hash()
      |        ^~~~~
hashmap.c:92:1: error: no return statement in function returning non-void [-Werror=return-type]
   92 | }
      | ^
test.c: In function ‘insertMap’:
test.c:453:5: error: ‘main’ is normally a non-static function [-Werror=main]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
  511 | }
      | ^
test.c:511:1: error: expected declaration or statement at end of input
At top level:
test.c:453:5: error: ‘main’ defined but not used [-Werror=unused-function]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:217:5: error: ‘insert_test5’ defined but not used [-Werror=unused-function]
  217 | int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
      |     ^~~~~~~~~~~~
test.c:131:6: error: ‘compare_test’ defined but not used [-Werror=unused-function]
  131 | void compare_test(){
      |      ^~~~~~~~~~~~
test.c:125:6: error: ‘hash_test3’ defined but not used [-Werror=unused-function]
  125 | void hash_test3(){ //no random
      |      ^~~~~~~~~~
test.c:111:6: error: ‘hash_test2’ defined but not used [-Werror=unused-function]
  111 | void hash_test2(){ // colisiones
      |      ^~~~~~~~~~
test.c:100:6: error: ‘hash_test1’ defined but not used [-Werror=unused-function]
  100 | void hash_test1(){ // posición válida
      |      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
81e7162
